Removing lots of redundant stuff
For using with other mods (by default Immersive Engineering) removed all the redundant and duplicated fuel production and energy generation functionality.
Also adjusted configs to use Immersive Engineering fuels.